# geoteo

./: APP_ANALYSIS.md  DEMO_SCRIPT.md  ENHANCEMENTS.md  LICENSE  PROJECT_STRUCTURE.txt  README.md  app.py  app_original_backup.py  app_v2.py  config.py  issues.md  pyproject.toml  run.sh
assets/: custom.css
backend/: __init__.py  api_client.py  cache_manager.py  data_processor.py  database.py  ml_predictor.py  openai_client.py  report_generator.py  weather_client.py
utils/: __init__.py  logger_setup.py
