[tool.poetry]
name = "airwatch"
version = "1.0.0"
description = "Smart City Air Quality Heatmap Dashboard - Real-time global air quality monitoring and visualization platform"
authors = ["AirWatch Team"]
license = "MIT"
readme = "README.md"
keywords = ["air-quality", "geospatial", "dashboard", "visualization", "smart-city"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# Web Frameworks
dash = "^2.18.0"
dash-bootstrap-components = "^1.6.0"
flask = ">=1.0.4,<3.1"
flask-cors = "^5.0.0"
gunicorn = "^22.0.0"

# Data Processing
pandas = "^2.2.0"
numpy = "^1.26.0"
scipy = "^1.14.0"

# Visualization
plotly = "^5.24.0"
kaleido = "0.2.1"

# API & HTTP
requests = "^2.32.5"
httpx = "^0.27.0"

# Machine Learning
scikit-learn = "^1.5.0"

# PDF Export
reportlab = "^4.2.0"
weasyprint = "^62.3"

# Utilities
python-dotenv = "^1.2.1"
pytz = "^2025.2"
python-dateutil = "^2.9.0"

# Caching
redis = "^5.1.0"
diskcache = "^5.6.3"

# Logging
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
